--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
 Eba Mengistu <Barkotka@gmail.com@gmail.com>
+Ojo Timilehin Joseph <Ojooluwatimilehinpeter@yahoo.com>
